--- a/Base_shape_1/line&circle.tex
+++ b/Base_shape_1/line&circle.tex
@@ -46,16 +46,20 @@
 
 \begin{tabular}{c|c}
     \hline
-    一个圆&
+    一个圆(使用let-in操作符)&
     \begin{tikzpicture}
         \coordinate [label=left:$A$] (A) at (0,0); 
         \coordinate [label=right:$B$] (B) at (1.25,0.25); 
 
         \draw (A) -- (B);
-        \draw (A) let \p1 = ($ (B) - (A) $) 
-            in circle ({veclen(\x1,\y1)});
+        \draw (A) let \p1 = ($ (B) - (A) $) in circle ({veclen(\x1,\y1)});
     \end{tikzpicture}\\
     \hline
 \end{tabular}
 
+\section{组合图形}
+
+\begin{tikzpicture}
+    
+\end{tikzpicture}
 \end{document}
