--- a/CUGB论文模板/CUGB_paper.tex
+++ b/CUGB论文模板/CUGB_paper.tex
@@ -23,7 +23,7 @@
 		\includegraphics[width=0.7\textwidth]{figs/CUGB_fig}\\
 		\vspace{3.5cm}
 		\begin{center}
-			\textbf{\li\yihao 数学与应用数学专业前沿课\\[5pt]结课论文}
+			\textbf{\li\yihao XXXX课程\\[5pt]结课论文}
 		\end{center}
 		\vspace{3cm}
 		\begin{center}
@@ -66,10 +66,10 @@
 	\newpage
 	
 	
-	\textbf{\heiti 摘要：} 本文从。
+	\textbf{\heiti 摘要：} 本文从实际出发。
 	
 	
-	\textbf{\heiti 关键词：} 时
+	\textbf{\heiti 关键词：} 卷积神经网络
 	
 \section{引言}
 	
@@ -78,7 +78,7 @@
 	\begin{figure}[H]
 		\centering
 		\includegraphics[width=0.95\linewidth]{figs/1}
-		\caption[图1]{浦发银行(sh600000)2020年K线图及指标图}
+		\caption[图1]{图形样例}
 		\label{fig:1}
 	\end{figure}
 	
@@ -88,25 +88,22 @@
 	
 	
 	\section{指标选择及描述}
-	由于在此也不作进一步分析。
+	由于。
 	
 \section{模型建立}
 	
-	\subsection{时序数据平滑化}
+	\subsection{数据处理}
 	
-		处
+		进行数据处理。
 		
-		
-		虽然从图上看，随着$k$的增大，图像变得越来越平滑，但也因此失去了一部分的信息，所以此时选取$k=7$进行平滑处理即可。
-		
-	\subsection{指数预测模型}
+	\subsection{预测模型}
 	
-		指、
+		正文部分。
 		
 		
-	\subsection{ARIMA模型}
+	\subsection{模型}
 		
-		ARIMA模溯的观测值的数量。
+		数量。
 		
 	
 \section{模型求解}
@@ -115,15 +112,11 @@
 	
 	\subsection{指数模型}
 	
-	使用forecast包中的forecast()函数进行预测，可得到
+	使用函数进行预测。
 	
+	\subsection{模型}
 	
-	
-	上述结果中，浅灰和深灰的部分分别代表预测结果的80\%和95\%置信区间。
-	
-	\subsection{ARIMA模型}
-	
-		针对ARIMA模型，需要先进行模型的评价，这里绘制正态Q-Q图，如果数据满足正态分布，则数据中的点会落在图中的线上，由下图可知，数据拟合效果较好。
+		针对模型。
 		
 		
 		
@@ -143,7 +136,7 @@
 	
 	\subsection{心得体会}
 	
-	在高。
+	在。
 	
 	
 \begin{thebibliography}{1}		
