--- a/Part3封面示例/Part3封面示例.tex
+++ b/Part3封面示例/Part3封面示例.tex
@@ -1,12 +1,10 @@
-\documentclass{standalone}
+\documentclass[tikz]{standalone}
 
-\usepackage{tikz}
 \usetikzlibrary{angles,calc,quotes}
 
 \begin{document}
 
-\begin{tikzpicture}
-    [angle radius=.75cm]
+\begin{tikzpicture}[angle radius=.75cm]
     \node (A) at (-2,0) [red, left] {$A$};
     \node (B) at (3,0.5) [red, right] {$B$};
     \node (C) at (-2,2) [blue, left] {$C$};
